// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gilded Rose > Works with Aged Brie - -1 - -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 2 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 3 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 4 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 5 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 6 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 7 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 11 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Aged Brie - -1 - 12 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 2 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 3 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 4 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 5 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 6 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 7 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 11 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 0 - 12 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 2 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 3 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 4 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 5 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 6 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 7 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 11 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 1 - 12 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 2 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 3 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 4 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 5 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 6 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 7 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 11 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 49 - 12 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 2 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 3 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 4 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 5 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 6 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 7 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 11 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 50 - 12 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 2 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 3 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 4 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 5 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 6 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 7 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 11 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Aged Brie - 51 - 12 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - -1 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 0 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 1 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 2 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 3 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 4 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 5 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 6 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 7 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 10 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 11 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Apple - -1 - 12 1`] = `
Item {
  "name": "Apple",
  "quality": -1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - -1 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 0 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 1 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 2 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 3 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 4 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 5 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 6 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 7 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 10 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 11 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Apple - 0 - 12 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - -1 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 0 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 1 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 2 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 3 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 4 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 5 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 6 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 7 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 10 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 11 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Apple - 1 - 12 1`] = `
Item {
  "name": "Apple",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - -1 1`] = `
Item {
  "name": "Apple",
  "quality": 47,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 0 1`] = `
Item {
  "name": "Apple",
  "quality": 47,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 1 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 2 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 3 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 4 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 5 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 6 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 7 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 10 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 11 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Apple - 49 - 12 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - -1 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 0 1`] = `
Item {
  "name": "Apple",
  "quality": 48,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 1 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 2 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 3 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 4 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 5 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 6 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 7 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 10 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 11 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Apple - 50 - 12 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - -1 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 0 1`] = `
Item {
  "name": "Apple",
  "quality": 49,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 1 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 2 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 3 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 4 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 5 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 6 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 7 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 10 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 11 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Apple - 51 - 12 1`] = `
Item {
  "name": "Apple",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 2 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 3 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 4 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 5 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 6 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 7 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 11 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - -1 - 12 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 2 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 3 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 4 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 5 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 6 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 7 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 11 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 0 - 12 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 2 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 3 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 4 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 5 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 6 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 7 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 11 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 1 - 12 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 2 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 3 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 4 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 5 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 6 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 7 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 11 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 49 - 12 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 2 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 3 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 4 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 5 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 6 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 7 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 11 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 50 - 12 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 2 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 3 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 4 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 5 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 6 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 7 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 11 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Backstage passes to a TAFKAL80ETC concert - 51 - 12 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 2 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 3 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 4 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 5 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 6 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 7 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 11 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - -1 - 12 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 2 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 3 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 4 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 5 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 6 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 7 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 11 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 0 - 12 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 2 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 3 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 4 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 5 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 6 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 7 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 11 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 1 - 12 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 2 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 3 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 4 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 5 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 6 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 7 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 11 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 49 - 12 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 2 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 3 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 4 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 5 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 6 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 7 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 11 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 50 - 12 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 2 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 3 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 4 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 5 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 6 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 7 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 11 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Works with Sulfuras, Hand of Ragnaros - 51 - 12 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 12,
}
`;
